Fix the extra lines added by GwtIncompatibleStripper.
This also fixes mappings and native_js output that was adding an extra line.

Fixes https://github.com/google/j2cl/issues/152

PiperOrigin-RevId: 463679394